<resources>
    <string name="app_name">CTIAM</string>
    <string name="txtnombreCompleto">Digite su nombre completo</string>
    <string name="txtEmail">  Ingrese su correo electrónico</string>
    <string name="txtClave">  Ingrese su contraseña</string>
    <string name="txtCedula">Digite su cedula</string>
    <string name="txtBotonRegistro">¡Registrate!</string>
    <string name="txtYaTieneCuentaLink">¿Ya tienes una cuenta? , inicia sesión aquí.</string>
    <string name="txtBotonInicio">Inicia sesión</string>
    <string name="txtOlvido">¿Olvidó su contraseña? , recuperela aquí.</string>
    <string name="txtNoTieneCuenta">¿Aún no está registrado? , registrese aquí.</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="titletienda">Tienda 1.0</string>
    <string name="descripciontienda">Es una tienda muy bonita</string>
    <string name="horario">6:00am - 8:00pm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name_perfil">Sebastian Castellanos</string>

    <string name="menu_productos">Productos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>