<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/fototienda"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/tiendasonline"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nombretienda"
                android:textSize="18sp"
                android:text="@string/titletienda"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/Primario"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/descripciontienda"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:text="@string/descripciontienda"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horariotienda"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:text="@string/horario"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                />

        </LinearLayout>

        <!-- Buttons -->

        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@drawable/arro_fin"
            app:backgroundTint="@color/Primario"/>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>